<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/menu_setting"
            android:paddingTop="@dimen/setting_area_top"
            android:paddingLeft="@dimen/height_100px"
            android:layout_row="0"
            android:layout_column="0" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/setPass"
            android:id="@+id/setWP"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/aboutInfo"
            android:layout_marginTop="@dimen/setting_area_top"
            android:paddingLeft="@dimen/height_100px"
            android:layout_row="2"
            android:layout_column="0" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/aboutAbout"
            android:id="@+id/aboutUs"
            android:layout_row="3"
            android:layout_column="1" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/aboutVersion"
            android:id="@+id/aboutVersion"
            android:layout_row="4"
            android:layout_column="1" />
    </GridLayout>

</LinearLayout>